@@ -1,8 +1,8 @@
 Package: robustX
 Type: Package
 Title: eXperimental eXtraneous eXtraordinary ... Functionality for Robust Statistics
-Version: 1.1-1
-Date: 2009-11-18
+Version: 1.1-2
+Date: 2009-12-07
 Author: Werner Stahel, Martin Maechler and potentially others
 Maintainer: Martin Maechler <maechler@stat.math.ethz.ch>
 Description: eXperimental eXtraneous eXtraordinary Functionality for Robust Statistics
